--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@popperjs/core": "^2.11.8",
+    "@types/dompurify": "^3.0.5",
     "bootstrap": "^5.3.8",
     "cropperjs": "^1.6.2",
+    "dompurify": "^3.3.1",
     "marked": "^17.0.1",
     "naive-ui": "^2.43.2",
     "pinia": "^2.2.4",
